# fosnie

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  config.example.toml
backend/.sqlx/: query-000e476e618764538847ebb2c718d64e7d6efcfb42f7b4c9b1d7ee21f28134c8.json  query-008d6c0a7681eea942def3ea5aba972812c46a34b5e631f8ff050273c5e9da9f.json  query-00ba9112403c3d602be21162b8526f8e4aa6ff9d75d2e92e8f7eb1d63739d842.json  query-011bd3258061c8c8aad12f20b1efbdf78830e6ade1da029f10a2de53ecc6c2a6.json  query-012e3e2882223e66dbb8d98b7f856c4b5f8ea64521f79447911acdc1801312d3.json  query-026a4ee8eee51ba97659afbd1c5ccc2c60befbe845af2048a807fbb9e5afae1c.json  query-02b8204a884417a139eb44e7f7100bbd4c76045f16dad997e0a9810bfb822c44.json  query-02bbc6a16a55e1b34542baf583cb425071e5a07758ed6bdd8cb1b914a692dee4.json  query-031b27a185e06ec26ad35b7ca8ad356b36dd3668ff581da6a1f2ce3f7204a253.json  query-0345682b3d615a3304409776d6f33181f31b3c33b0531d81a7e680c05a4227f0.json  query-038bb163e56de4dca4e38e1b9e203ccb137c9a353754f8c1cd0f2ae930fd0c7a.json  query-038e16492ece2fc452accf9a4211a43855bfb4c41d6d46bc39b11d588aadf223.json  query-03da6f55035de177c5f6da4726c11ed4225266f5ea7e786961d42f971e9053ee.json  query-04a36e7f03b6593034934f8d7d12e3828d9c888f7dc134ebd98f179562351898.json  query-04ef0f13a8d4f212cedf3d6f093577e097101ba65f2a0f3b25cbc64b6adc4b9a.json  query-05451b093dc5089b2f9b8e3a04c6e80de823280def6e24172a0b0193e92bbf85.json  query-057fc5ec6df72962090859ec966b025e7b6c659e9f43b72d5d2d8f70a4c0f072.json  query-06072d6fbf109017f7c291909093c587c49e7a0384010223aed30442d983564c.json  query-060c7f219e379bc49cdfe9a6f21a4fd463566c49b363a8da19f1b41b5ccabc39.json  query-06d5e01de9e58b75e0c17ee199e791c5a66cd7bd8582d8beb5dad5f6498f61dd.json  query-06e20fe3d83e3a59b99e9f93e0c46ebda33ebdd5b49f550626f8afa505615e3e.json  query-0856f12241db340f5c35f9c94988986a8ff0ae75ffb4d73959ac8814de41cbe5.json  query-08577fb5584a54b9428147a0b1576224ccb3a8b6c91de15927406f1fe407074c.json  query-088c92703325ef5aed310e90c6612ecd124aebf7f14e7b7aceb6b0d171b0a808.json  query-08be5b0e40aadf3aba631d5999ac5283854ab00f374e48ae5d4bd65cef33a201.json  query-09a8bc8634214f073dece2dd003260fb01a373d9e7e70841c49d2ab6907f5aa6.json  query-0a4df5b77359c003fadeaa60900861546501b7f29806dafc68f494b1d1db0491.json  query-0b663c03be53371a0354f777555185a2eb93ef442d21814bad94af7346286553.json  query-0b691f7c835748ca470e8dd6873bbc0ced4834ed81d52e86b1044934803526c6.json  query-0c41c4e07109d7dde0b6b312fa0211dba1b746b1a64f532df6b437c7657c2b8a.json  query-0caef7e5488eceaaf99fa8012243ed7d3cf12ea3dede75ad7c365573a10266e9.json  query-0ce385f7a59b9092ae10f8564cd0fdf5c773f3ef7059bd0075529e8107e08bcb.json  query-0d1c94f85dc2f2caba8f717b43537c51b5143e34fb0876ef646fbaf2effbbc56.json  query-0d6938a857e5560946b0ebf44a0ea73c62c4075662ee07ba85425bf8e05866f1.json  query-0d95a784096508de18c4d4180b712c345965780cda4ff1a870bf464d11961991.json  query-0e14dfebf02de036798471608e0358ef66448151515a049385657e62471c58d9.json  query-0e7624cfd503970e00b6e08b4bb5675cc0c38128bf7120ae74637140da298433.json  query-0fa4596370f25b53081962fc4be93c764b663449449e4afbfa657d940edecbd8.json  query-0fc6340487098b14c266205fefbf200e1519cff5d2b557a546691f9a1feed52d.json  query-1058d0bc7c1bf4dcf45b4f1f1be1a0569e2e99ed91f189ffd001db46e96be255.json  (+614 more)
backend/deploy/: BACKUP-DR.md  README.md  config.linux.example.toml  config.macos.example.toml  docker-compose.dev.yml  docker-compose.yml  example.env  install.ps1  install.sh
backend/examples/: desktop_client.rs
backend/migrations/: 0001_skeleton.sql  0002_auth.sql  0003_chat.sql  0004_rag.sql  0005_agents.sql  0006_skills_prompts_memory.sql  0007_documents_versions.sql  0008_tabular.sql  0009_artefacts_citations.sql  0010_legal_holds.sql  0011_team_messaging.sql  0012_message_fts.sql  0013_feedback.sql  0014_automations.sql  0015_prompt_default_agent.sql  0016_exports.sql  0017_artefact_file_kind.sql  0018_knowledge_bases.sql  0019_artefact_message.sql  0020_automation_targets.sql  0021_chat_shares.sql  0022_message_attachments.sql  0023_message_reactions.sql  0024_message_content_encrypted.sql  0025_chat_summaries.sql  0026_agent_versions.sql  0027_group_feature_flags.sql  0028_automation_reminders.sql  0029_group_chat_reads.sql  0030_prompt_content.sql  0031_prompt_variables.sql  0032_user_profile.sql  0033_agent_runs.sql  0034_agent_sector.sql  0035_seed_agents.sql  0036_kb_document_effective_date.sql  0037_skill_is_default.sql  0038_moderation.sql  0039_park_stale_users.sql  0040_group_member_requests.sql  (+59 more)
backend/src/: crypto.rs  embedding_index.rs  error.rs  features.rs  lib.rs  main.rs  metrics.rs  provider_cli.rs  providers.rs  providers_seed.rs  reasoning.rs  server.rs  skills_seed.rs  state.rs  storage.rs  telemetry.rs  upload.rs  vision.rs
backend/tests/: agent_eval.rs  agent_tools.rs  approval_sync.rs  approval_sync_ws.rs  audit_sink_seam.rs  auth_provider_seam.rs  auth_token.rs  automation_reminders.rs  automations.rs  breakglass.rs  byok.rs  chat_turn.rs  closeout.rs  code_interpreter.rs  config_audit.rs  connector_registry_seam.rs  custom_tools.rs  desktop_execution.rs  desktop_workspaces.rs  devices.rs  documents.rs  evidence_sink_seam.rs  exports.rs  feature_resolver_seam.rs  feedback.rs  firecracker.rs  group_flags.rs  group_policy_seam.rs  gvisor.rs  health.rs  ingest_status.rs  integrations.rs  knowledge.rs  libraries.rs  local_auth.rs  mcp.rs  mcp_oauth_mock_as.rs  memory_skills_prompts.rs  messaging.rs  mfa.rs  (+32 more)
crates/fosnie-protocol/: Cargo.toml
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ml/: .env.example  .env.linux.example  .env.macos.example  Dockerfile  pyproject.toml
ml/app/: __init__.py  anthropic_adapter.py  chunker.py  config.py  contextual.py  decompose.py  docx_engine.py  embeddings.py  extract.py  gemini_adapter.py  generate.py  guided.py  html_engine.py  http_client.py  ingest.py  llm.py  locate.py  main.py  map_reduce.py  memory.py  metadata.py  ocr.py  paths.py  rag_ctx.py  (+19 more)
(+505 files in other folders)
