[project]
name = "pai-ml"
version = "0.1.0"
description = "PAI Platform ML/RAG service. Generation-only slice (step 3); the LLM client for the platform — Rust never calls the LLM directly."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "qdrant-client>=1.18.0",
    "fastembed>=0.8.0",
    "python-docx>=1.2.0",
    "pypdf>=6.12.2",
    "pdfplumber>=0.11.4",
    "lxml>=5.0",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "prometheus-client>=0.21",
    "trafilatura>=2.0",
    "readability-lxml>=0.8.1",
    # Beautiful-documents skill library. markdown-it-py (pure Python) renders the
    # Markdown→HTML for the WeasyPrint PDF route.
    "markdown-it-py>=3.0",
    # Optional at runtime: WeasyPrint needs native libs (Pango/cairo/GDK-PixBuf).
    # Where they are absent (e.g. the Windows dev box) the importable check in
    # pdf.py fails and the LibreOffice DOCX→PDF fallback is used. pandoc is a
    # system binary (not a Python dep), probed like LibreOffice.
    "weasyprint>=63",
    # Optional at runtime (web_render_enabled=false default): the render tier
    # needs `playwright install chromium` as an explicit deploy step.
    "playwright>=1.49",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
