# Copyright 2026 Private AI Ltd (SC881079)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "fosnie-protocol"
version = "0.1.0"
edition = "2021"
description = "Fosnie WebSocket wire protocol — the frame types shared by the server and every client that speaks to it."
license = "Apache-2.0"
publish = false

[lib]
name = "fosnie_protocol"
path = "src/lib.rs"

# Wire types only: no runtime, no transport, no database. Anything that would pull
# a server dependency in here belongs on the other side of this boundary.
[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1", features = ["serde"] }
